# ds_interfaces

./: CMakeLists.txt  package.xml  readme.md
msg/: ChangeState.msg  Connect.msg  Heartbeat.msg  MasterBroadcast.msg
src/: Constants.hpp  TopicHelpers.hpp
srv/: ChangeConnection.srv  ChangeControlState.srv  NewConnection.srv  RequestEditConnection.srv  RequestSlaveList.srv
types/: StateType.msg
